--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Server Port
+server.port=8088
 
+# MySQL Configuration
+spring.datasource.url= jdbc:mysql://localhost:3306/deedb?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= sagarm
+
+#For Spring Boot 3
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+#Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
